# finlab

./: pyproject.toml
api/config/: prompts.py
api/routers/: agent.py  search.py
api/services/: agent.py  search.py
